# dominoes

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
dominoes-gamestate/: Cargo.toml  README.md
dominoes-gamestate/src/: lib.rs
dominoes-player/: Cargo.toml  README.md
dominoes-player/src/: dominoes_player.rs  dominoes_response_generator.rs  dominoes_rollout.rs  dominoes_static_evaluator.rs  lib.rs
dominoes-state/: Cargo.toml
dominoes-state/src/: action.rs  boneyard.rs  dominoes_state.rs  layout.rs  lib.rs  zhash.rs
game/: Cargo.toml  README.md
game/src/: dominoes_game.rs  layout_parser.rs  lib.rs  main.rs  scene_graph.rs
gamestate/: Cargo.toml  README.md
gamestate/src/: lib.rs
human-player/: Cargo.toml  README.md
human-player/src/: human_player.rs  lib.rs
player/: Cargo.toml  README.md
player/src/: action.rs  dominoes_player.rs  dominoes_response_generator.rs  dominoes_rollout.rs  dominoes_static_evaluator.rs  hand.rs  human_player.rs  lib.rs  player.rs
rules/: Cargo.toml
rules/src/: boneyard.rs  configuration.rs  layout.rs  lib.rs  tile.rs
