[package]
name = "dominoes-state"
version = "0.1.0"
edition = "2024"

[dependencies]
ego-tree = "0.10"
hidden-game-player = { path = "../hidden-game-player" }
multimap = "0.10"
rand = "0.9"
rand_chacha = "0.9"
rules = { path = "../rules" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
